[gd_scene load_steps=15 format=3 uid="uid://dhd1nrywuvnay"]

[ext_resource type="Script" uid="uid://d34nl1e4s34h3" path="res://src/object/char.gd" id="1_jgqhi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rk80h"]
radius = 32.0
height = 94.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wgbol"]
load_path = "res://.godot/imported/front_leg.png-272d15d3e55c9e5b01c1e4905e62c091.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2vr73"]
load_path = "res://.godot/imported/back_leg.png-16f7c36a1dd9d3e5b71a7070ebae9cae.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_okbsj"]
load_path = "res://.godot/imported/armor.png-6ab95c2df11baf1189336451c22d4bcd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_q0u3p"]
load_path = "res://.godot/imported/head.png-bcc63d522869b6a10b928894d4da1cbf.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_j7cwi"]
load_path = "res://.godot/imported/face.png-a01770c827a2c2044b62cec13e194b1f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3np52"]
load_path = "res://.godot/imported/helmet.png-78c86eca8f50746946b78c3392a35118.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qhx6l"]
load_path = "res://.godot/imported/hand.png-542093fb055a7a975c9d347aa8287069.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lof0h"]
load_path = "res://.godot/imported/weapon.png-672f4068a793e073245fa1ed3714608a.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_smfy5"]
load_path = "res://.godot/imported/arm.png-fc6e3a128c3ae789d45f30207cafc975.ctex"

[sub_resource type="Animation" id="Animation_mn6my"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/char_display/front_leg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-30, 84)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/char_display/front_leg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/char_display/back_leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(20, 82)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/char_display/back_leg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/char_display/armor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 58)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/char_display/armor:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/char_display/head:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 30)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/char_display/head:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/char_display/face:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(28, 12)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/char_display/face:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D/char_display/helmet:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -34)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite2D/char_display/helmet:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprite2D/char_display/hand:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-40, 80)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Sprite2D/char_display/hand:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sprite2D/char_display/weapon:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-38, 84)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Sprite2D/char_display/weapon:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Sprite2D/char_display/arm:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-36, 44)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Sprite2D/char_display/arm:rotation")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qqmpb"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D/char_display/front_leg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, 84), Vector2(-30, 84)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/char_display/front_leg:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/char_display/back_leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(20, 82), Vector2(20, 82)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D/char_display/back_leg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D/char_display/armor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-2, 58), Vector2(-2, 58), Vector2(-2, 58)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D/char_display/armor:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0507015, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Sprite2D/char_display/head:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.13333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 30), Vector2(0, 30), Vector2(0, 30)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Sprite2D/char_display/head:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 1.13333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0222846, 0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Sprite2D/char_display/face:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.966667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(28, 12), Vector2(28, 14), Vector2(28, 12)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Sprite2D/char_display/face:rotation")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.966667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0222846, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Sprite2D/char_display/helmet:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 1.13333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-2, -34), Vector2(-2, -34), Vector2(-2, -34)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Sprite2D/char_display/helmet:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 1.13333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0222846, 0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Sprite2D/char_display/hand:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-40, 80), Vector2(-44.7296, 77.8711), Vector2(-40, 80)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Sprite2D/char_display/hand:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0730937, 0.0]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Sprite2D/char_display/weapon:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-38, 84), Vector2(-41.9977, 83.9752), Vector2(-38, 84)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Sprite2D/char_display/weapon:rotation")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0507168, 0.0]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Sprite2D/char_display/arm:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-36, 44), Vector2(-36, 44), Vector2(-36, 44)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Sprite2D/char_display/arm:rotation")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 0.866667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.132253, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2er1j"]
_data = {
&"RESET": SubResource("Animation_mn6my"),
&"idle": SubResource("Animation_qqmpb")
}

[node name="char" type="Node2D"]
script = ExtResource("1_jgqhi")

[node name="Area2D" type="Area2D" parent="."]
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -40)
shape = SubResource("CapsuleShape2D_rk80h")
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Node2D" parent="."]
position = Vector2(0, -40)
scale = Vector2(0.5, 0.5)

[node name="char_display" type="CanvasGroup" parent="Sprite2D"]

[node name="front_leg" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(-30, 84)
texture = SubResource("CompressedTexture2D_wgbol")
offset = Vector2(30, -84)
hframes = 9

[node name="back_leg" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(20, 82)
texture = SubResource("CompressedTexture2D_2vr73")
offset = Vector2(-20, -82)
hframes = 9

[node name="armor" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(-2, 58)
texture = SubResource("CompressedTexture2D_okbsj")
offset = Vector2(2, -58)
hframes = 9

[node name="head" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(0, 30)
texture = SubResource("CompressedTexture2D_q0u3p")
offset = Vector2(0, -30)
hframes = 9

[node name="face" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(28, 12)
texture = SubResource("CompressedTexture2D_j7cwi")
offset = Vector2(-28, -12)
hframes = 9
vframes = 10

[node name="helmet" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(-2, -34)
texture = SubResource("CompressedTexture2D_3np52")
offset = Vector2(2, 34)
hframes = 9

[node name="hand" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(-40, 80)
texture = SubResource("CompressedTexture2D_qhx6l")
offset = Vector2(40, -80)
hframes = 9

[node name="weapon" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(-38, 84)
texture = SubResource("CompressedTexture2D_lof0h")
offset = Vector2(38, -84)
hframes = 9

[node name="arm" type="Sprite2D" parent="Sprite2D/char_display"]
position = Vector2(-36, 44)
texture = SubResource("CompressedTexture2D_smfy5")
offset = Vector2(36, -44)
hframes = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2er1j")
}

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
